@@ -1,2 +1,3 @@
-.build
-Pod-Weaver-PluginBundle-Author-KENTNL-*
+/.build
+/Pod-Weaver-PluginBundle-Author-KENTNL-*
+/tmp/
