@@ -1,6 +1,14 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001003
+ [Added / configure requires]
+ - perl 5.008
+
+ [Added / test requires]
+ - perl 5.008
+
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.001002 2014-08-22T19:55:54Z
 
@@ -20,4 +28,3 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
 
  [Added / test requires]
  - Test::Fatal
-
