@@ -1,6 +1,14 @@
 Release history for Pod-Weaver-PluginBundle-Author-KENTNL
 
 {{$NEXT}}
+ - Bugfix: Avoid test failures with -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001002, see misc/*.deps* for details
+ - configure: +1 (recommends: ↑1)
+ - develop: +14 ↑4 -3 (recommends: +1, suggests: ↑2)
+ - runtime: (recommends: +1)
+ - test: +1 ↓1 (recommends: ↑1 ↓1)
 
 0.001002 2014-08-22T19:55:54Z
  [Trivial]
@@ -20,4 +28,3 @@ Release history for Pod-Weaver-PluginBundle-Author-KENTNL
 
 0.001000 2014-08-21T12:38:54Z
  - First version
-
